Changes in BradleyTerry2 1.0-7
==============================

Improvements
------------

    o	new examples of prediction added, including using `predict.BTm` to 
        estimate abilities with non-player abilities set to non-zero values
        (for models with a fixed reference category).

Changes in behaviour
--------------------

    o	default `level` in `predict.BTm` and `predict.glmmPQL` is 0 if a fixed
        effects model has been fitted, 1 otherwise.
        
Bug fixes
---------

    o	BTabilities now works (again) for models where the reference category is
        not the first player. Players are kept in their original order (levels 
        of `player1` and `player2`), but the abilities are returned with the 
        appropriate reference.
        
    o   BTabilities now works when ability is modelled by covariates and some
        parameters are inestimable (e.g. as in `chameleons.model` on 
        ?chameleons).
        
    o   predict.BTglmmPQL.R now works for models with inestimable paramters
	
Changes in BradleyTerry2 1.0-6
==============================

Changes in behaviour
--------------------

    o	BTabilities now returns NA for unidentified abilities

Bug fixes
---------

    o	BTabilities now respects contrasts argument and contrasts attributes of
    	player1 and player2 factors. Also handle unidentified coefficients 
	    correctly.


Changes in BradleyTerry2 1.0-5
==============================

Bug fixes
---------

    o	no longer imports from gnm, so gnm need not be installed.


Changes in BradleyTerry2 1.0-4
==============================

Bug fixes
---------

    o	depends on lme4 (>=1.0).


Changes in BradleyTerry2 1.0-3
==============================

New Features
------------

    o	updated football data to include full 2011-12 season.


Changes in BradleyTerry2 1.0-2
==============================

New Features
------------

    o	added football example presented at useR! 2013 with generalised
    	Davidson model for ties.

