@@ -6,10 +6,11 @@ Maintainer: Heather Turner <ht@heatherturner.net>
 URL: http://bradleyterry2.r-forge.r-project.org
 Description: Specify and fit the Bradley-Terry model, including structured versions in which the parameters are related to explanatory variables through a linear predictor and versions with contest-specific effects, such as a home advantage.
 Depends: R (>= 2.10), lme4 (>= 1.0)
-Imports: brglm, gtools, stats
+Imports: brglm, gtools, qvcalc, stats
 Suggests: prefmod
 Enhances: gnm
 License: GPL (>= 2)
 LazyData: yes
-RoxygenNote: 6.0.1.9000
+Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
+RoxygenNote: 6.0.1
