@@ -12,6 +12,7 @@ S3method(print,BTabilities)
 S3method(print,BTglmmPQL)
 S3method(print,BTm)
 S3method(print,summary.BTglmmPQL)
+S3method(qvcalc,BTabilities)
 S3method(residuals,BTm)
 S3method(summary,BTglmmPQL)
 S3method(vcov,BTabilities)
@@ -23,6 +24,7 @@ export(countsToBinomial)
 export(glmmPQL)
 export(glmmPQL.control)
 export(plotProportions)
+export(qvcalc)
 import(stats)
 importFrom(brglm,brglm)
 importFrom(graphics,curve)
@@ -31,4 +33,5 @@ importFrom(graphics,points)
 importFrom(gtools,combinations)
 importFrom(lme4,findbars)
 importFrom(lme4,nobars)
+importFrom(qvcalc,qvcalc)
 importFrom(utils,flush.console)
