@@ -14,12 +14,17 @@ BTabilities(model)
 \code{TRUE}}
 }
 \value{
-A two-column numeric matrix (of class \code{c("BTabilities", "matrix")}, with columns named \code{"ability"} and \code{"se"}; has one row
+A two-column numeric matrix of class \code{c("BTabilities", "matrix")}, with columns named \code{"ability"} and \code{"se"}; has one row
 for each player; has attributes named \code{"vcov"}, \code{"modelcall"},
 \code{"factorname"} and (sometimes --- see below) \code{"separate"}.  The
 first three attributes are not printed by the method
 \code{print.BTabilities}.
-
+}
+\description{
+Computes the (baseline) ability of each player from a model object of class
+\code{"BTm"}.
+}
+\details{
 The player abilities are either directly estimated by the model, in which
 case the appropriate parameter estimates are returned, otherwise the
 abilities are computed from the terms of the fitted model that involve
@@ -27,7 +32,7 @@ player covariates only (those indexed by \code{model$id} in the model
 formula). Thus parameters in any other terms are assumed to be zero. If one
 player has been set as the reference, then \code{predict.BTm()} can be used to
 obtain ability estimates with non-player covariates set to other values,
-see examples at \code{\link[=predict.BTm]{?predict.BTm}}.
+see examples for \code{\link[=predict.BTm]{predict.BTm()}}.
 
 If the abilities are structured according to a linear predictor, and if
 there are player covariates with missing values, the abilities for the
@@ -35,10 +40,6 @@ corresponding players are estimated as separate parameters.  In this event
 the resultant matrix has an attribute, named \code{"separate"}, which
 identifies those players whose ability was estimated separately.  For an
 example, see \code{\link[=flatlizards]{flatlizards()}}.
-}
-\description{
-Computes the (baseline) ability of each player from a model object of class
-\code{"BTm"}.
 }
 \examples{
 
